Bug 1143994 - Fix some -Wunreachable-code and -Wswitch warnings in imagelib. r=seth