image/src/FrameAnimator.cpp
@@ -403,6 +403,7 @@ FrameAnimator::DoBlend(nsIntRect* aDirtyRect,
   // Calculate area that needs updating
   switch (prevFrameData.mDisposalMethod) {
     default:
+      MOZ_ASSERT_UNREACHABLE("Unexpected DisposalMethod");
     case DisposalMethod::NOT_SPECIFIED:
     case DisposalMethod::KEEP:
       *aDirtyRect = nextFrameData.mRect;
@@ -536,6 +537,9 @@ FrameAnimator::DoBlend(nsIntRect* aDirtyRect,
         break;
 
       default:
+        MOZ_ASSERT_UNREACHABLE("Unexpected DisposalMethod");
+      case DisposalMethod::NOT_SPECIFIED:
+      case DisposalMethod::KEEP:
         // Copy previous frame into compositingFrame before we put the new
         // frame on top
         // Assumes that the previous frame represents a full frame (it could be
